/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.shenyu.examples.dubbo.api.service";
package DubboTestProtobuf;

import "google/protobuf/empty.proto";

message DubboTestProtobuf {
  string id = 1;
  string name = 2;
}

service DubboProtobufService {
  rpc insert(DubboTestProtobuf) returns (DubboTestProtobuf) {}

  rpc findOne(google.protobuf.Empty) returns (DubboTestProtobuf) {}

  rpc update(DubboTestProtobuf) returns (google.protobuf.Empty) {}
}
